헤더 메인, 서브메뉴 작성

--- a/index.html
+++ b/index.html
@@ -18,9 +18,120 @@
 
   <!-- HEADER -->
   <div class="header">
+    <!-- HEADER__TITLE -->
     <div class="title">BICYCLE TRIP</div>
-    <div class="sub-title"></div>
+
+    <!-- HEADER__MAIN-MENU -->
+    <ul class="header-main-menu">
+      <li>
+        <h2>해외여행</h2>
+        <ul class="header-main-menu-text">
+          <li>동남아시아</li>
+          <li>유럽</li>
+          <li>두바이</li>
+          <li>남태평양</li>
+          <li>미주</li>
+          <li>캐나다</li>
+          <li>하와이</li>
+        </ul>
+      </li>
+
+      <li>
+        <h2>제주<br>국내여행</h2>
+        <ul class="header-main-menu-text">
+          <li>자유여행</li>
+          <li>패키지</li>
+          <li>지방출발</li>
+          <li>내륙여행</li>
+          <li>섬여행</li>
+        </ul>
+      </li>
+
+      <li>
+        <h2>항공</h2>
+        <ul class="header-main-menu-text">
+          <li>항공예약</li>
+        </ul>
+      </li>
+
+      <li>
+        <h2>호텔<br> 펜션</h2>
+        <ul class="header-main-menu-text">
+          <li>호텔예약</li>
+          <li>펜션/풀빌라예약</li>
+        </ul>
+      </li>
+
+      <li>
+        <h2>투어<br>입장권</h2>
+        <ul class="header-main-menu-text"></ul>
+      </li>
+
+      <li>
+        <h2>허니문</h2>
+        <ul class="header-main-menu-text">
+          <li>몰디브</li>
+          <li>칸쿤</li>
+          <li>푸켓</li>
+          <li>코사무이</li>
+          <li>발리</li>
+          <li>유럽</li>
+        </ul>
+      </li>
+
+      <li>
+        <h2>골프</h2>
+        <ul class="header-main-menu-text">
+          <li>필리핀</li>
+          <li>태국</li>
+          <li>베트남</li>
+          <li>사이판</li>
+          <li>괌</li>
+          <li>하와이</li>
+          <li>제주</li>
+        </ul>
+      </li>
+
+      <li>
+        <h2>연계<br>서비스</h2>
+        <ul class="header-main-menu-text">
+          <li>전문가여행기</li>
+          <li>하나투어상품권</li>
+          <li>포켓와이파이</li>
+          <li>안심여행지원</li>
+          <li>기업출장/단체</li>
+          <li>기프트카드</li>
+          <li>비자센터</li>
+          <li>해외여행자보험</li>
+        </ul>
+      </li>
+
+      <li>
+        <h2>혜택<br>이벤트</h2>
+        <ul class="header-main-menu-text">
+          <li>할인/혜택</li>
+          <li>마일리지 클럽</li>
+          <li>여행기획전</li>
+          <li>이벤트</li>
+        </ul>
+      </li>
+
+    </ul>
+
+    <!-- HEADER__SUB-MENU -->
+    <div class="sub-menu-container">
+      <ul class="sub-menu">
+        <li><a href="#">회원가입</a></li>
+        <li><a href="#">로그인</a></li>
+        <li><a href="#">예약확인/결제</a></li>
+        <li><a href="#">고객센터</a></li>
+      </ul>
+    </div>
   </div>
+
+
+
+  <div class="header-serch"></div>
   <!-- 화면 5개 구성 -->
   <div class="swiper">
     <div class="swiper-wrapper">
@@ -216,4 +327,4 @@
 
 
 <!-- 미국 일본 프랑스 독일 한국 -->
-<!-- 로드 mtb 전기    2인용  아동용 -->
+<!-- 로드 mtb 전기    2인용  아동용 -->werfg
